--- a/spring-quiz-desktop/pom.xml
+++ b/spring-quiz-desktop/pom.xml
@@ -35,6 +35,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>11</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
